--- a/inductive.tex
+++ b/inductive.tex
@@ -1204,7 +1204,7 @@ functions.  The training strategies for those networks are usually based on redu
 empirical risk using the gradient descent algorithm while controlling the complexity of
 the model with regularization techniques\footnote{To counterbalance the potential
 ``excess'' of neurons, techniques like $l_2$ regularization ``disable'' some neurons by
-pressuring their weights to zero.}.  Consult \cref{sec:mlp}.
+pressuring their weights to zero.}.
 
 % TODO: adaline for regression
 
@@ -1330,7 +1330,6 @@ learning machines.
 Many powerful methods have been proposed in the literature --- e.g., support vector
 machines, boosting, and deep learning --- that can deal with complex nonlinear problems.
 I encourage the reader to dive into the literature to learn more about these methods and
-the theoretical principles behind them.  Some comments about a few methods are given in
-\cref{chap:learning-machines}.
+the theoretical principles behind them.
 
 % vim: spell spelllang=en
