--- a/about.tex
+++ b/about.tex
@@ -17,12 +17,12 @@ experience as a lead data scientist in R\&D projects for the Brazilian Air Force
 which included projects in areas such as image processing, natural language processing,
 and spatio-temporal data analysis.
 
-Literature provides us a wide range of excellent theoretical books on machine learning and
+Literature provides us with a wide range of excellent theoretical books on machine learning and
 statistics, and highly regarded practical books on data science tools.  However, I missed
 something that could provide a solid foundation on data science, covering all steps in a
 data science project, including its software engineering aspects.
 
-My goal is to provide a book that serve as a textbook for a course on data science
+My goal is to provide a book that serves as a textbook for a course on data science
 projects or as a reference for professionals working in the field.  I strive to maintain a
 formal tone while preserving the practical aspects of the subject.  I do not focus on
 a specific tool or programming language, but rather seek to explain the semantics of data
@@ -34,8 +34,8 @@ For this purpose, I assume you have a strong mathematical and statistical founda
 
 One important artificial constraint I have imposed in the material (for the sake of the
 course) is that I only consider predictive methods, more specifically inductive ones. I do
-not address topics such as clustering, association rules mining, transductive learning,
-anomaly detection, time series forecasting, reinforced learning, etc.
+not address topics such as clustering, association rule mining, transductive learning,
+anomaly detection, time series forecasting, reinforcement learning, etc.
 
 I expect my approach on the subject to provide understanding of all steps in a data
 science project, including a deeper focus on correct evaluation and validation of data
@@ -49,7 +49,7 @@ practitioner in the field; rather, I aim to be honest and transparent.
 \emph{I'd rather be bold and straightforward than cower about my beliefs.}
 \vspace{1em}
 
-Hope you enjoy reading.
+I hope you enjoy reading.
 
 \newpage
 
@@ -78,7 +78,7 @@ Hope you enjoy reading.
 \vspace{3em}
 
 \begin{lparwithqr}{https://www.buymeacoffee.com/verri}
-  If you want to support me, you can \emph{purchase a coffee} at
+  If you want to support me, you can \emph{buy me a coffee} at
   \href{\aurl}{buymeacoffee.com/verri}. I will greatly appreciate it.  I have a number of
   ideas for new books and courses, and financial support will enable me to make them a
   reality.
@@ -97,4 +97,4 @@ I would like to thank the following contributors for their help in improving thi
   \item Vitor V. Curtis
 \end{itemize}
 
-All contributors freely waived their rights to the content they contributed to this book.
+All contributors have freely waived their rights to the content they contributed to this book.
