--- a/courses.tex
+++ b/courses.tex
@@ -1,14 +1,18 @@
-\chapter{Course plan}
+\chapter*{Course plan}
+\thispagestyle{empty}
 
-In the following, I present the course plan for PO-235 and CMC-16.
+In the following, I present the course plan for PO-235.
 
 Any questions about the classes should be sent via Google Classroom.  If your query is of
-general interest, please use the main channel.  If your query is personal and related to
+general interest, please use the main stream.  If your query is personal and related to
 a specific assignment or grade, please use the private stream.
+
+You can contact me via email at \href{mailto:verri@ita.br}{verri@ita.br} or
+\href{mailto:filipe.verri@gp.ita.br}{filipe.verri@gp.ita.br}.
 
 \newpage
 \thispagestyle{empty}
-\section*{PO-235 Data science project}
+\section*{PO-235 Data Science Project}
 
 \emph{Course plan (\the\year{})}
 
@@ -16,27 +20,25 @@ Prof. Filipe A. N. Verri
 
 \paragraph{Important:} Only graduate students are permitted to enroll in this course.
 
-\paragraph{Number of students:} Approx. 20
+\paragraph{Number of students:} Approximately 20
 
 \paragraph{Course load:} 3--0--0--4
 
-\paragraph{Requirements:} Advanced programming skills, strong statistical background, and
-beginner-level machine-learning skills.
+\paragraph{Requirements:} Advanced programming skills, a strong statistical background, and
+beginner-level machine learning skills.
 
 \paragraph{Course program:}
-Brief history of data science.  Fundamental data concepts. Stages in a data science
-project.  Data Infrastructure. Data integration from multiple sources. Data engineering
-and shaping.  Inductive learning and principles of statistical learning theory.
-Application of machine learning models in real-world problems.  Experimental planning for
-data science. Model evaluation and Bayesian analysis.  Documentation and deployment.
-Ethical and legal issues in data science.  Privacy-preserving computational approaches.
+Brief history of data science.  Fundamental data concepts.  Methodologies for data science
+projects.  Structured data, database normalization, and tidy data.  Data handling
+operators and their properties.  Learning from data and principles of statistical learning
+theory.  Data preprocessing tasks.  Evaluation and validation of data science products.
 
 \paragraph{Goals:}
 Providing the theoretical foundation and practical concepts to develop an end-to-end
 data science project for an inductive task.
 
 \paragraph{Teaching methodology:}
-Expository classes in common classroom, using whiteboard, slide presentations, coding
+Expository classes in a common classroom, using a whiteboard, slide presentations, coding
 examples, books, and scientific papers.  Supplementary didactic materials will be available
 in Google Classroom. The development of the case study will occur during home study
 hours, including programming and scientific paper writing.  All classes will be given in
@@ -49,9 +51,7 @@ scientific paper (optional), developing a data science product, and a 30-minute 
 
 Final grades will be calculated as
 \begin{equation*}
-  \text{\nth{1} Q} = \sqrt{T_1 T_2}\text{,} \qquad
-  \text{\nth{2} Q} = \sqrt{T_3 L}\text{,} \qquad
-  \text{Exam} = L\text{.}
+  \sqrt{\frac{T_1 + T_2 + T_3}{3} \cdot L}
 \end{equation*}
 
 \paragraph{Case study:} At most 6 groups will be formed.  Each group will be responsible for
@@ -65,18 +65,16 @@ application, a mobile application, or a web service.
 \paragraph{Bibliography:}
 \begin{itemize}
   \itemsep 0pt
+  \item Filipe A. N. Verri (2025).  \emph{Data Science Project: An Inductive Learning
+    Approach}.  Victoria, British Columbia, Canada: Leanpub.
   \item \fullcite{Zumel2019}.
   \item \fullcite{Wickham2023}.
-  \item \fullcite{Kelleher2018}.
 \end{itemize}
-
-The first two books --- \textcite{Zumel2019,Wickham2023} --- are available online for free.
 
 Any required extra material will be made available in Google Classroom.
 
 \thispagestyle{empty}
 
-\newpage
 \paragraph{Calendar:} The expected schedule is presented below.
 \thispagestyle{empty}
 
@@ -87,22 +85,24 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    \multirow{2}{*}{1} & Brief history of data science \\
-      & Preliminaries \\
+    \multirow{2}{*}{1} & Mathematical foundations review \\
+      & Brief history of data science \\
     \midrule
-    2 & \bfseries Written test \\
+    \multirow{2}{*}{2} & \bfseries Written test (60 min) \\
+      & Brief history of data science \\
     \midrule
     3 & Fundamental data concepts \\
     \midrule
-    4 & Stages in a data science project \\
+    4 & Methodologies for data science projects \\
     \midrule
-    5 & \multirow{2}{*}{Statistical learning theory} \\
-    6 &  \\
+    5 & Structured data, database normalization, and tidy data \\
     \midrule
-    6 & \multirow{2}{*}{Data handling} \\
-    7 &  \\
+    6 & Data handling operators and their properties \\
     \midrule
-    8 & \bfseries Written test \\
+    7 & Learning from data and principles of statistical learning theory \\
+    \midrule
+    \multirow{2}{*}{8} & \bfseries Written test (60 min) \\
+      & Project discussions \\
     \bottomrule
   \end{tabular}
 \end{center}
@@ -114,15 +114,16 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    1 & Evaluation \\
+    1 & Learning from data and principles of statistical learning theory \\
     \midrule
-    2 & Experimental planning \\
+    2 & Data preprocessing tasks \\
     \midrule
-    3 & Ethics, privacy and legal issues \\
+    3 & Evaluation and validation of data science products \\
     \midrule
-    4 & \bfseries Written test \\
+    \multirow{2}{*}{4} & \bfseries Written test (60 min) \\
+      & Project discussions \\
     \midrule
-    5 & \multirow{2}{*}{Project discussion} \\
+    5 & \multirow{2}{*}{Project discussions} \\
     6 &  \\
     \midrule
     7 & \multirow{2}{*}{\bfseries Presentations} \\
@@ -131,8 +132,7 @@ Any required extra material will be made available in Google Classroom.
   \end{tabular}
 \end{center}
 
-Case studies will be presented during exam weeks.  At most 3 case studies will be
+Case studies will be presented during exam weeks.  At most, 3 case studies will be
 presented per day, with 30 minutes for each presentation and 20 minutes for questions.
 
 \thispagestyle{empty}
-
