--- a/about.tex
+++ b/about.tex
@@ -17,7 +17,7 @@ experience as a lead data scientist in R\&D projects for the Brazilian Air Force
 which included projects in areas such as image processing, natural language processing,
 and spatio-temporal data analysis.
 
-Literature provides us with a wide range of excellent theoretical books on machine learning and
+Literature provides us with a wide range of excellent theoretical material on machine learning and
 statistics, and highly regarded practical books on data science tools.  However, I missed
 something that could provide a solid foundation on data science, covering all steps in a
 data science project, including its software engineering aspects.
